# empatica-challenge

./: .gitignore  Dockerfile  README.md  exploration.ipynb  pip.conf  requirements_dev.txt  setup.cfg  tox.ini
src/check_faulty_devices/: __main__.py  check_devices.py  check_faulty_devices.py  plot_utils.py
tests/: conftest.py  fixtures.py  test_check_devices.py
