[bumpversion]
current_version = 0.0.1
commit = True
tag = True
tag_name = v{new_version}

[metadata]
name = check-faulty-devices
description = check-faulty-devices
author = Federico D'Ambrosio
author-email = fedexist@gmail.com
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
project-urls =
	Documentation = https://pyscaffold.org/
platforms = any
classifiers =
	'Development Status :: 2 - Pre-Alpha',
	'Intended Audience :: Developers',
	'Natural Language :: English',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',


[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
	=src
setup_requires =
	pyscaffold>=3.2a0,<3.3a0
	pytest-runner
install_requires =
	pandas==1.3.3
	matplotlib==3.4.3

python_requires = >= 3.7

[options.packages.find]
where = src
exclude =
	tests

[options.extras_require]
testing =
	pytest
	pytest-cov

[options.entry_points]

[test]
extras = True

[aliases]
dists = bdist_wheel
test = pytest

[tool:pytest]
addopts =
	--cov src/ --cov-report term-missing --cov-report xml --cov-report html
	--verbose
norecursedirs =
	dist
	build
	.tox
testpaths = tests

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
max-line-length = 120
ignore = F401
exclude =
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pylint.MASTER]
ignore = CVS
max-line-length = 120
limit-inference-results = 100
persistent = yes
enable = c-extension-no-member
max-nested-blocks = 5
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = no
min-similarity-lines = 4
argument-naming-style = snake_case
fail-under = 8
good-names = i,
	j,
	k,
	ex,
	Run,
	_,
	df,
	dist_name
extension-pkg-whitelist = ml_metadata

[pylint.'MESSAGE CONTROL']
disable =
	missing-module-docstring,
	trailing-comma-tuple,
	import-error,
	logging-format-interpolation,
	logging-fstring-interpolation

[pylint.'TYPECHECK']
ignored-modules = ml_metadata
ignored-classes = ml_metadata

[pyscaffold]
version = 3.2.3
package = aa_ml_metadata
extensions =
	tox

[bumpversion:file:src/aa_ml_metadata/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
